# DictionaryCreator

./: .gitignore  CMakeLists.txt  DictionaryCreatorConfig.cmake.in  English_A.text  HowToBuild.md  README.md  config.h.in  connections.cpp  connections.h  console_file_system.cpp  console_file_system.h  dictionary.cpp  dictionary.h  dictionary_creator.cpp  dictionary_creator.h  dictionary_definer.cpp  dictionary_definer.h  dictionary_entry.cpp  dictionary_entry.h  dictionary_language.h  dictionary_manager.cpp  dictionary_manager.h  dictionary_types.h  errors.cpp  few_random_words.test  filesystem_features.h  huge_test.cpp  huge_test.h  main.cpp  optional_utils.h  platform_UNIX.h  platform_Windows.h  portability_utils.cpp  portability_utils.h  regex_parser.cpp  regex_parser.h  simple_tests.cpp  simple_tests.h  utils.cpp  utils.h
cpp/: CMakeLists.txt  HowToBuild.md  HowToUse.md  conanfile.txt  main.cpp  pseudomain.cpp
cpp/dictionary_creator_library/: CMakeLists.txt  connections.cpp  connections.h  dictionary.h  dictionary_creator.h  dictionary_entry.cpp  dictionary_exporter.h  dictionary_language.h  dictionary_manager.cpp  dictionary_manager.h  dictionary_types.h  json_parser.cpp  regex_parser.cpp
cpp/filesystem_library/unix/: OS_specific_fs_manager.h  fs_manager.cpp
cpp/filesystem_library/windows/: OS_specific_fs_manager.h
cpp/tests/: boost_test_connections.cpp  boost_test_dictionary_exporter.cpp  boost_test_regex_parser.cpp
cpp/tests/obsolete_tests/: English_A.text  English_Q.text  simple_tests.cpp  simple_tests.h
dictionary_creator_library/: CMakeLists.txt  connections.cpp  dictionary.cpp  dictionary.h  dictionary_creator.cpp  dictionary_creator.h  dictionary_definer.cpp  dictionary_definer.h  dictionary_definer_impl.h  dictionary_entry.h  dictionary_exporter.cpp  dictionary_language.h  dictionary_manager.cpp  dictionary_manager.h  dictionary_types.h  json_parser.h  json_parser_impl.h  regex_parser.cpp  regex_parser.h
filesystem_library/: CMakeLists.txt  fs_manager.h
filesystem_library/unix/: OS_specific_fs_manager.h  fs_manager.cpp
filesystem_library/windows/: OS_specific_fs_manager.h  fs_manager.cpp  win_resource_file.rc
rust/: Cargo.toml  README.md
rust/auxiliary/: Cargo.toml
rust/auxiliary/src/: connections.rs  fs_manager.rs  json_parser.rs  lib.rs  regex_parser.rs
rust/dictionary_creator/: Cargo.toml
rust/dictionary_creator/src/: dictionary.rs  dictionary_creator.rs  dictionary_definer.rs  dictionary_entry.rs  dictionary_exporter.rs  dictionary_language.rs  dictionary_manager.rs  dictionary_types.rs  lib.rs  main.rs
tests/: ALL_CLEAR.txt  CMakeLists.txt  English_Q.text  boost_test_dictionary.cpp  boost_test_dictionary_creator.cpp  boost_test_dictionary_definer.cpp  boost_test_dictionary_entry.cpp  boost_test_dictionary_exporter.cpp  boost_test_dictionary_manager.cpp  boost_test_json_parser.cpp  boost_test_regex_parser.cpp  boost_test_sorters.cpp  boost_test_utilities.h  boost_tests.cpp  huge_test.cpp  huge_test.h  simple_tests.h  string_examples.h
tests/obsolete_tests/: CMakeLists.txt  huge_test.cpp  huge_test.h  simple_tests.cpp  simple_tests.h
